--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <h1>Ismail Nossam</h1>
   <p>Welcome to my demo</p>
   <p>This is new feature</p>
+  <p>This is a [dropdown]</p>
 </body>
 </html>
